--- a/Fantasy/Fantasy.Backend/appsettings.json
+++ b/Fantasy/Fantasy.Backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Fantasy;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
